--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,12 +20,12 @@ permissions:
   contents: read
 
 jobs:
-  matrix:
+   build:
+    runs-on: ${{ matrix.os }}
     strategy:
      matrix: 
       os: [ubuntu-latest, windows-latest, macos-latest ]
       version: [11, 13, 17]
-    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 
