--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,8 @@ jobs:
     strategy:
      matrix: 
       os: [ubuntu-latest, windows-latest, macos-latest ]
-      version: [11, 13, 17]
+      version: [11,17,13]
+      
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 
