--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,7 @@ on:
   schedule:
     - cron: '30 12 * * 3'
     - cron: '0 22 * * 5'
-    - cron: '50 20 * * 2'
+    - cron: '10 18 * * 2' # 18:10 по московскому времени во вторник
 
 permissions:
   contents: read
